# Neon-Goals-Service

./: .CLAUDE  .gitignore  AGENTS.md  CLAUDE.md  README.md  TODO.md  check-job.ts  check-recent-jobs.ts  dev.sh  mcp-proxy-server.ts  package-lock.json  package.json  test-complete-flow.ts  test-final-real-scraping.ts  test-goal-scenarios.ts  test-real-scraping.ts  test-truck-goal.ts  test.txt  tsconfig.json
.github/workflows/: deploy.yml
docs/: 2026-03-22-session-summary.md  candidate-acquisition-strategy.md
prisma/: schema.prisma  seed.ts
prompts/: README.md  pyproject.toml
prompts/neon_prompts/: __init__.py  cli.py  generator.py  signatures.py  specs.py
scripts/: deploy-worker.sh  export-ai-models.ts  model_mappings.py  parse_vehicle_query.py  query-goal.ts  scrape-ally-bank.py  scrape-autotrader.py  scrape-cargurus.py  scrape-carmax.py  scrape-cars-camoufox.py  scrape-cars-multisite.py  scrape-cars.py  scrape-carvana-interactive.py  scrape-carvana.py  scrape-kbb.py  scrape-truecar.py  test_cargurus_adapter.py  test_carvana_e2e.py  test_carvana_results.json  test_llm_filter_mapping.py  test_llm_filter_output.json  test_vehicle_filter_service.py  vpn_manager.py
src/: app.module.ts  cors.test.ts  cors.ts  main.ts
worker/: README_DSPY.md  main.py  pyproject.toml  requirements.txt
worker/data/dspy/: redirect_seed_examples.jsonl
worker/dspy_pipeline/: __init__.py  cli.py  commands.py  config.py  dataset.py  db.py  live_chat.py  optimization.py  signatures.py
worker/tests/: test_browser_launcher.py  test_dataset.py  test_live_chat_streaming.py
(+117 files in other folders)
