[project]
name = "scraper-worker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.5",
    "dspy-ai>=2.6.0",
    "fastapi>=0.115.0",
    "mlflow>=2.20.0",
    "psycopg[binary]>=3.2.5",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "pydantic>=2.9.2",
]

[project.scripts]
start = "uvicorn main:app --host 0.0.0.0 --port 5000"
dspy-pipeline = "dspy_pipeline.cli:main"
